--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.1",
     "@types/react": "18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@types/three": "0.144.0",
     "@types/uuid": "^8.3.4",
     "react": "18.2.0",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .tsx"
   },
   "browserslist": {
     "production": [
@@ -37,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
