--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.10.9",
     "@mui/material": "5.10.12",
+    "@react-spring/three": "9.5.5",
     "@react-three/drei": "9.40.0",
     "@react-three/fiber": "8.9.1",
     "@types/react": "18.0.24",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "react-use-gesture": "9.1.3",
     "three": "0.146.0",
     "typescript": "4.8.4",
     "uuid": "9.0.0"
