--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@types/react-dom": "18.0.8",
     "@types/three": "0.144.0",
     "@types/uuid": "8.3.4",
+    "@use-gesture/react": "^10.2.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "react-use-gesture": "9.1.3",
     "three": "0.146.0",
     "typescript": "4.8.4",
     "uuid": "9.0.0"
