--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
         "plugin:react-hooks/recommended"
     ],
     "rules": {
-        "@typescript-eslint/ban-ts-comment": "off"
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-explicit-any": "off"
     }
 }
